# clion_opencv

./: CMakeLists.txt  main.cpp  opencvdemo.cpp  opencvexample.cpp  opencvfunction.h
